# url-shortener-backend

./: .env  Cargo.toml
errors/: app_error.rs
models/: entity.rs  requests.rs  response.rs
src/: db.rs  main.rs
src/errors/: app_error.rs
src/handlers/: mod.rs  shortener_handler.rs
src/models/: mod.rs  response.rs
src/repositories/: mod.rs  shortener_repo.rs
src/routes/: router.rs
src/services/: mod.rs  shortener_service.rs
