[package]
name = "url-shortner-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
uuid = "1.21.0"
nanoid = "0.4.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
dotenvy = "0.15.7"
